--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -12,12 +12,16 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 25px 45px;
+    // padding: 25px 45px;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     width: 100%;
 
     > div {
       display: flex;
-      flex-direction: column;
+      // flex-direction: column;
+      align-items: baseline;
       gap: 8px;
       font-size: 18px;
     }
